# newservice_cpp

./: CMakeLists.txt
include/: newsaggregator.hpp
src/: main  main.cpp
tests/: test_newservice.cpp
